fix(jca): route DSA Signature to real JDK SPI, fix SignatureUtil dead natives
Continuing the SecurityInfoTests/NestedJarFileTests investigation: the
real bcprov-jdk18on-1.78.1.jar signature uses a 2048-bit DSA key
(SHA256withDSA), which exposed two more root causes:

1. CratonVM had no native DSA Signature sign/verify at all --
   verify_dispatch/sign_dispatch simply have no DSA arm, so
   Signature.verify() for any DSA algorithm silently returned false with
   no exception. Fixed by routing SHA256withDSA/SHA1withDSA to the real
   sun.security.provider.DSA$* SPI, mirroring the existing ECDSA/EdDSA/
   ML-DSA real-routing mechanism (drive_real_signature_spi).

2. sun.security.util.SignatureUtil.{initVerify,initSign}WithParam had
   native registrations (sigutil_init_verify_key etc.) that existed
   specifically to bypass a known NPE (Signature.<clinit> is no-op'd
   elsewhere, so SharedSecrets.getJavaSecuritySignatureAccess() stays
   null and real bytecode would NPE) -- but SignatureUtil was never
   added to vm_exec.rs's check_override allowlist, so the interpreter
   always preferred real (NPE-prone) bytecode over the natives. This
   blocked SignerInfo.verify()'s jar-signature path for every algorithm,
   not just DSA. Fixed by allowlisting SignatureUtil next to the
   existing Signature/KeyFactory/KeyPair SigProbe entries.

Both fixes are verified correct via minimal, Spring-Boot-independent
repros, but getWhenJarIsSigned/verifySignedJar still fail: tracing every
ATHROW during the real test run found the actual remaining blocker is
further upstream, in real X.509 DER parsing (sun.security.x509
.X509CertInfo / sun.security.util.DerValue throwing while re-parsing one
of the two embedded certificates, likely due to the DSA cert's large key
material) -- a distinct, self-contained bug documented but not fixed
here. Full writeup, repro steps, and follow-up starting points in
docs/internal/springboot/securityinfo-jarsig-providers-npe-datainputstream-close-dsa-routing-