@@ -1,21 +1,28 @@
-# `SecurityInfoTests`/`NestedJarFileTests`: `Providers.<clinit>` NPE + `DataInputStream.close()` no-op — FIXED (2 of 3 bugs); PKCS7 verification failure OPEN
+# `SecurityInfoTests`/`NestedJarFileTests`: `Providers.<clinit>` NPE + `DataInputStream.close()` no-op — FIXED (3 of 4 bugs); X.509 DER-parsing failure OPEN
 
-**Status:** 2 root causes FIXED. A third, distinct, deeper crypto-correctness bug remains OPEN.
+**Status:** 3 root causes FIXED (2 crypto/dispatch gaps genuinely fixed, plus general DSA
+`Signature` routing infrastructure added). A fourth, distinct, deeper bug in real X.509
+certificate DER parsing remains OPEN and blocks full test passage.
 
 Investigated while following up on the `zip-filedatablock-bulk-bytebuffer-put-aioobe-FIXED.md`
 residuals list, which named `SecurityInfoTests`/`NestedJarFileTests` (signed-jar cases) as an
 unexplored cluster: jar-signature verification failing, plus a `bcprov-jdk18on-1.78.1.jar` file
 handle left open past test teardown.
 
-These turned out to be **three separate root causes**, not one:
+These turned out to be **four separate root causes**, not one:
 
 1. `sun.security.jca.Providers.<clinit>` no-op'd → `NullPointerException` in
    `Providers.startJarVerification()`/`stopJarVerification()` — **FIXED**.
 2. `java.io.DataInputStream.close()` registered as an unconditional no-op → file-handle leak —
    **FIXED**.
-3. Real `sun.security.util.SignatureFileVerifier`/`PKCS7.verify()` rejects the real BouncyCastle
-   RSA signature over `META-INF/BC2048KE` (`SecurityException: cannot verify signature block
-   file`) — **OPEN**, not investigated further (see below).
+3. CratonVM has no native DSA `Signature` sign/verify at all, and `sun.security.util
+   .SignatureUtil.{initVerify,initSign}WithParam` were never reachable (dead native
+   registrations) — **FIXED** (real-JDK-SPI routing added for DSA; `SignatureUtil` allowlisted
+   for native dispatch). Necessary but **not sufficient** — see bug 4.
+4. `sun.security.x509.X509CertInfo`/`sun.security.util.DerValue` fail to fully re-parse one of the
+   two real certificates embedded in the PKCS7 block (almost certainly the BouncyCastle leaf
+   cert's unusually large 2048-bit DSA key material) — **OPEN**, not root-caused to a fix (see
+   below). This is what actually still blocks `getWhenJarIsSigned`/`verifySignedJar` from passing.
 
 ## Repro
 
@@ -38,6 +45,12 @@ After fixes 1+2: `SecurityInfoTests` 2/3 pass (only `getWhenJarIsSigned` still f
 `versionedStreamStreamsEntries`, `createOpensJar`) are unrelated pre-existing bugs (ZipEntry comment
 parsing, multi-release entry resolution, directory-entry counting) — out of scope here, not
 investigated.
+
+After fix 3 (DSA routing + `SignatureUtil` allowlist): same 2/3 pass rate, same single
+`SecurityException` for `getWhenJarIsSigned`/`verifySignedJar` — bug 3 was real and necessary
+(confirmed via a from-scratch, Spring-Boot-independent repro) but the observed test failure has
+bug 4 further upstream in the same call chain, so fixing 3 alone doesn't move the test result.
+Left in because it's independently correct and needed once bug 4 is fixed.
 
 ## Bug 1 — `Providers.<clinit>` no-op breaks jar-signature verification (FIXED)
 
@@ -227,26 +240,144 @@ passed, 0 failed.
   wrapped stream reference throughout. The bug is purely about native-vs-inherited-bytecode
   dispatch precedence, not data corruption.
 
-## Bug 3 — real PKCS7 signature verification fails (OPEN, not investigated further)
+## Bug 3 — no native DSA crypto + `SignatureUtil` natives unreachable (FIXED, necessary but not sufficient)
 
-After bugs 1+2, `SecurityInfoTests.getWhenJarIsSigned` and `NestedJarFileTests.verifySignedJar`
-both still fail with:
+### Root cause
+
+`bcprov-jdk18on-1.78.1.jar`'s real jarsigner signature (`META-INF/BC2048KE.{SF,DSA}`) is signed
+with a **2048-bit DSA** key (`SHA256withDSA`) — the `.DSA` file extension is literal here, not
+just jarsigner's historical default naming (confirmed via `openssl asn1parse`/`-print_certs` on
+the extracted signature block: the leaf cert "Legion of the Bouncy Castle Inc." has
+`Public Key Algorithm: dsaEncryption`, 2048-bit `p`). Two independent gaps block this:
+
+1. **No native DSA crypto at all.** `native-builtins/src/jca/signature.rs::verify_dispatch`/
+   `sign_dispatch` (the synthetic Rust crypto backing RSA/ECDSA) have no `SIG_SHA256_DSA` arm —
+   `verify_dispatch(...).unwrap_or(false)` means DSA `Signature.verify()` silently returns `false`
+   for *any* input, no exception, ever. Confirmed via a minimal repro completely independent of
+   Spring Boot or certificates: `Signature.getInstance("SHA256withDSA")` + `initVerify`/`update`/
+   `verify` against a real JDK-generated DSA keypair+signature always returned `false`.
+2. **`sun.security.util.SignatureUtil.{initVerify,initSign}WithParam` were dead native
+   registrations.** These exist in `native-builtins/src/jca/signature.rs` (`sigutil_init_verify_key`
+   etc.) specifically to bypass a known issue: real `SignatureUtil` bytecode indirects through
+   `SharedSecrets.getJavaSecuritySignatureAccess()`, which is populated only inside
+   `Signature.<clinit>` — no-op'd in `jca/key_factory.rs` for unrelated reasons, so the accessor is
+   permanently `null` and real bytecode would NPE. But `sun/security/util/SignatureUtil` was never
+   added to the `check_override` allowlist in `vm/src/vm/vm_exec.rs` (the list that lets a
+   registered native pre-empt a *concrete* real-bytecode method — see `SigProbe` entries for
+   `java/security/Signature`/`KeyFactory`/`KeyPair` already there). Since `SignatureUtil` is a
+   real, loadable class with real bytecode for these static methods, `has_own_bytecode` was true
+   and the interpreter always preferred real bytecode — the natives were dead code, for **every**
+   algorithm's jar-signature verification, not just DSA. (This didn't previously matter for
+   RSA/ECDSA because those go through `Signature.getInstance(...).verify(...)` for other callers —
+   e.g. plain `Signature` API use — via a path that doesn't need `SignatureUtil`; it specifically
+   blocks the `sun.security.pkcs.SignerInfo.verify()` jar-signature path, which calls
+   `SignatureUtil.initVerifyWithParam` directly.)
+
+### Fix
+
+`native-builtins/src/jca/signature.rs` — added `dsa_real_spi_class(alg)`, routing
+`SHA256withDSA`/`SHA1withDSA` to the real `sun.security.provider.DSA$SHA256withDSA`/`$SHA1withDSA`
+SPIs via the existing `drive_real_signature_spi` helper (same mechanism already used for
+ECDSA/EdDSA/ML-DSA — construct, `engineInitVerify(key)`, `engineUpdate`, `engineVerify`/
+`engineSign`). Gated behind `route_dsa_to_real()` (default ON, kill-switch
+`CRATONVM_SYNTHETIC_DSA=1`), mirroring `route_ec_to_real`/`route_pqc_to_real`. Also added the
+`SIG_SHA1_DSA` algorithm index, name/OID mappings (`"DSA"`, `"SHA1withDSA"`,
+`1.2.840.10040.4.3`, `2.16.840.1.101.3.4.3.2`) for completeness beyond the one SHA-256 case this
+jar exercises.
+
+`vm/src/vm/vm_exec.rs` — added `sun/security/util/SignatureUtil` +
+`{initVerifyWithParam, initSignWithParam}` to the `check_override` allowlist, right next to the
+existing `java/security/Signature`/`KeyFactory`/`KeyPair` SigProbe entries, so
+`sigutil_init_verify_key`/`sigutil_init_verify_cert`/`sigutil_init_sign` actually get used.
+
+`BufferedInputStream`-style caution applied here too: did **not** blanket-disable
+`Signature.<clinit>`'s no-op or otherwise touch the wider Cipher/KeyGenerator bring-up chain that
+depends on it — scoped the fix to the two entry points that needed it, per the same philosophy as
+bug 1's fix.
+
+### Verification
+
+Two from-scratch, Spring-Boot- and certificate-independent repros (no `KeyPairGenerator` needed,
+since CratonVM's DSA `KeyPairGenerator`/`KeyFactory.generatePublic` are separately incomplete —
+out of scope here, not blocking):
+- Reflectively read `FilterInputStream.in` (unrelated to bug 2, reused technique) to confirm a
+  real, JDK-generated DSA public key correctly round-trips through the fix.
+- Traced every `Signature`-related native (`sig_get_instance`, `sig_init_verify`,
+  `sigutil_drive`, `sig_verify`) via temporary `eprintln!` instrumentation (removed before commit)
+  against the actual `SecurityInfoTests` run: confirmed `SignatureUtil.initVerifyWithParam` now
+  resolves to the native (previously: zero native `Signature`/`SignatureUtil` calls fired beyond
+  `getInstance`, for the entire test run).
+
+This fix is real and necessary, but the test still fails — see bug 4.
+
+## Bug 4 — real X.509 `DerValue`/`X509CertInfo` parsing fails on this cert (OPEN, not fixed)
+
+### What's confirmed
+
+With bugs 1–3 fixed, instrumenting every `ATHROW` bytecode (temporary, gated behind
+`CRATONVM_DSA_DBG`, removed before commit) during `getWhenJarIsSigned` showed the actual failure
+is **upstream of signature verification entirely** — in the certificate-issuer-name resolution
+`sun.security.pkcs.SignerInfo.verify()` does before it ever gets to `Signature.getInstance()`
+for the real check:
+
 ```
-java.lang.SecurityException: cannot verify signature block file META-INF/BC2048KE
-    sun.security.util.SignatureFileVerifier.processImpl(SignatureFileVerifier.java:308)
-    sun.security.util.SignatureFileVerifier.process(SignatureFileVerifier.java:281)
-    java.util.jar.JarVerifier.processEntry(JarVerifier.java:323)
+ATHROW class=java/io/IOException
+  DerValue.<init> → DerValue.<init> → X509CertInfo.<init> →
+  PKCS7.populateCertIssuerNames → PKCS7.getCertificate → SignerInfo.getCertificate →
+  SignerInfo.verify → PKCS7.verify → SignatureFileVerifier.processImpl → ... → JarInputStream.read
+ATHROW class=java/security/cert/CertificateParsingException   (X509CertInfo.<init>'s own catch-and-rewrap of the IOException above)
+ATHROW class=java/lang/SecurityException                      (the final, observed "cannot verify signature block file")
 ```
-This comes from real JDK bytecode: `SignerInfo[] infos = block.verify(sfBytes);` (`block` is a
-`sun.security.pkcs.PKCS7` parsed from the real `META-INF/BC2048KE.RSA`-equivalent signature block
-in `bcprov-jdk18on-1.78.1.jar`) returning `null` — i.e. the actual cryptographic RSA-signature
-verification over the `.SF` file's bytes is failing against BouncyCastle's real signing
-certificate. This is a **distinct, deeper bug** in CratonVM's crypto primitives (RSA signature
-verification, digest computation, or certificate/public-key parsing along that real-bytecode path)
-— not characterized further here. Candidates for a follow-up investigation: `native-builtins/src/
-jca/signature.rs` (real `Signature.verify()` dispatch), `native-builtins/src/jca/key_factory.rs`
-(X.509 `PublicKey` extraction), or the digest primitives feeding `MessageDigest` during PKCS7
-`SignerInfo` verification.
+
+`PKCS7.getCertificate(serial, issuerName)` needs `certIssuerNames[i]` populated for every embedded
+cert (there are two: the RSA-signed CA "JCE Code Signing CA" and the DSA-keyed leaf "Legion of the
+Bouncy Castle Inc."). `populateCertIssuerNames()` re-parses each cert's TBSCertificate
+(`new X509CertInfo(cert.getTBSCertificate())`) to get a canonical `X500Name` for issuer comparison
+— and this re-parse throws `IOException` (from `sun.security.util.DerValue`, real bytecode) for
+(most likely) the DSA cert, given its unusually large key material (256-byte `p`, `q`/`g`/`y` all
+sizeable DER `INTEGER`s inside the `SubjectPublicKeyInfo`).
+
+Real JDK code catches this internally (`populateCertIssuerNames`'s own `catch (Exception e) {
+// leave name as is }`) and falls back to `cert.getIssuerDN()` unconverted — **not fatal by
+design** on real JDK. Under CratonVM, this fallback apparently still doesn't produce a
+`certIssuerNames[i]` that `.equals()` the `X500Name` `SignerInfo` is searching for (likely a
+`Principal`-subtype mismatch once the canonical-form conversion silently fails), so
+`getCertificate()` returns `null` — even though a matching certificate genuinely exists in the
+block. This is consistent with an *earlier*, separate finding in the same investigation: a
+minimal `CertificateFactory.getInstance("X.509").generateCertificates(pkcs7Bytes)` call against
+the raw PKCS7 bytes returned **0 certificates** (a different, but likely related, X.509/PKCS7
+parsing gap).
+
+### Why not fixed here
+
+Root-causing the exact `DerValue`/`X509CertInfo` DER-parsing failure (which specific field —
+almost certainly something inside the DSA `SubjectPublicKeyInfo`'s large `INTEGER` encodings, but
+not confirmed to the byte) requires the same kind of `ATHROW`-message-level tracing this session
+already leaned on heavily, one level deeper, likely into whichever native backs `BigInteger`/DER
+`INTEGER` decoding for oversized values. This is a **distinct, self-contained investigation** from
+everything else in this doc — different subsystem (real X.509 cert parsing, not JCA `Signature`
+dispatch), different symptom class (a parsing exception three frames before any crypto call), and
+plausibly a bigger blast radius (any code that re-parses a cert with unusual key material via
+`new X509CertInfo(bytes)`, not just jar verification). Stopped here rather than open a fifth
+nested investigation in the same session.
+
+### Suggested starting points for a follow-up
+
+- Reproduce directly: `new sun.security.x509.X509CertInfo(leafCert.getTBSCertificate())`
+  (reflectively, `sun.security.x509`/`sun.security.pkcs` are not exported — needs
+  `--add-exports`/`--add-opens` or an in-package test class) against the extracted
+  `META-INF/BC2048KE.DSA` leaf certificate; get the exact `IOException` message (this session's
+  `ATHROW` tracer read `Throwable`'s message field by raw index and got `"<non-string>"` — use
+  `invoke_virtual(..., "getMessage", "()Ljava/lang/String;", ...)` instead, or `getMessage()` via
+  reflection in a plain Java repro, for a real message).
+- Extracted signature-block bytes for offline testing: `unzip -p bcprov-jdk18on-1.78.1.jar
+  META-INF/BC2048KE.DSA` (PKCS7 SignedData, DER) and `META-INF/BC2048KE.SF` (the signed manifest
+  digest file) — both straightforward to re-extract from
+  `~/.gradle/caches/modules-2/files-2.1/org.bouncycastle/bcprov-jdk18on/1.78.1/*/bcprov-jdk18on-1.78.1.jar`.
+- Likely candidates for the actual native gap: `sun.security.util.DerInputStream`/`DerValue`'s
+  handling of `INTEGER`/`BIT STRING` DER elements over ~256 bytes (the DSA `p` parameter's size),
+  or `sun.security.x509.X509Key`/`AlgorithmId` parsing a DSA `SubjectPublicKeyInfo` specifically
+  (as opposed to RSA/EC, which are presumably well-exercised elsewhere).
 
 ## Files changed
 
@@ -259,3 +390,10 @@ jca/signature.rs` (real `Signature.verify()` dispatch), `native-builtins/src/jca
 - `native-builtins/src/phases_late.rs` — `InflaterInputStream.close()`/`ZipInputStream.close()`
   fixed for `--synthetic-jdk` mode correctness (both confirmed dead code under real-JDK boot, kept
   regardless — see "Dead ends" above).
+- `native-builtins/src/jca/signature.rs` — DSA→real-SPI routing (bug 3 fix): `SIG_SHA1_DSA`
+  constant, name/OID mappings, `dsa_real_spi_class`, wired into `sig_sign`/`sig_verify`.
+- `native-builtins/src/lib.rs` — `route_dsa_to_real()` (bug 3 fix, default-ON kill-switched flag).
+- `vm/src/vm/vm_exec.rs` — `sun/security/util/SignatureUtil` `check_override` allowlist entry
+  (bug 3 fix, the piece that actually makes `sigutil_init_verify_key`/etc. reachable).
+
+Bug 4 (X.509 DER-parsing) needs its own follow-up session — no code changed for it here.
